refactored and fixed ui alignment

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
     text-align: center;
+    position: relative;
 }
 
 #canvasContainer {
@@ -32,10 +33,15 @@ body {
     margin: auto;
 }
 
+#uiContainer {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    width: 100%;
+}
+
 #tileInfoContainer {
     width: 800px;
-    position: absolute;
-    margin-left: 66.6%;
     border-top: 2px solid black;
 }
 
@@ -47,7 +53,6 @@ body {
 }
 
 #optionsContainer {
-    position: absolute;
     width: 800px;
     background: #eeeeee;
     border: 2px solid black;
